Correct sidebar on mobile

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,10 +1,11 @@
 // SIDEBAR GENERAL
 .sidebar {
     width: 188px;
-    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    overflow-y: auto;
+    bottom: 0;
     z-index: 9999;
 }
 .sidenav-list {
@@ -92,7 +93,7 @@
 .hamburger-icon {
     height: 20px;
     width: 23px;
-    margin: 23px -14px 0 31px;
+    margin: 23px -20px 0 31px;
     cursor: pointer;
 }
 #hamburger-menu,
@@ -164,17 +165,19 @@
 }
 .sidebar-smaller-screens {
 	width: 188px;
-	height: 100%;
 	position: fixed;
 	top: 0;
     left: 0;
+    overflow-y: auto;
+    bottom: 0;
 }
 .toggle-menu {
     width: 188px;
-	height: 100%;
 	position: fixed;
 	top: 0;
     left: 0;
+    overflow-y: auto;
+    bottom: 0;
     transform: translateX(0em);
     transition: all .8s ease-out;
     display: none;
@@ -216,12 +219,14 @@
 		display: none;
 	}
 	.sidebar-mobile {
-		width: 55px;
-		height: 100%;
+		width: 70px;
 		position: fixed;
 		top: 0;
 		left: 0;
-		z-index: 999;
+        z-index: 999;
+        overflow-y: auto;
+        bottom: 0;
+        overflow-x: hidden;
 	}
 	.sidebar-smaller-screens {
 		display: none;
@@ -236,7 +241,7 @@
 		display: none;
     }
     .sidebar-smaller-screens {
-		display: inline-block;
+        display: inline-block;
 	}
 }
 
